Restructing Vuc components

--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
     <script src="/static/plugins/ionslider/ion.rangeSlider.min.js"></script>
     <!-- Bootstrap slider -->
     <script src="/static/plugins/bootstrap-slider/bootstrap-slider.js"></script>
+  <!--GMAPS API-->
+    <script src=”https://maps.googleapis.com/maps/api/js?key=AIzaSyCsclSAOA7xNA0uVYk8MHaXU4mao9yAaOs”></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsclSAOA7xNA0uVYk8MHaXU4mao9yAaOs&libraries=places"></script>
   </body>
 </html>
