--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/bootstrap-3.3.2.min.css">
     <link rel="stylesheet" href="static/css/bootstrap-vue.css">
     <title>indianapolis-ui</title>
   </head>
@@ -11,8 +11,10 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="/static/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+    <script src="static/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+    <script src="static/js/bootstrap-3.3.2.min.js"></script>
+    <script type="text/javascript" src="static/js/bootstrap-multiselect.js"></script>
+    <link rel="stylesheet" href="static/css/bootstrap-multiselect.css" type="text/css"/>
     <!-- FastClick -->
     <script src="/static/plugins/fastclick/fastclick.min.js"></script>
     <!-- AdminLTE App -->
