--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/bootstrap-3.3.2.min.css">
-    <link rel="stylesheet" href="static/css/bootstrap-vue.css">
+    <!--<link rel="stylesheet" href="static/css/bootstrap-3.3.2.min.css">-->
+    <!--<link rel="stylesheet" href="static/css/bootstrap-vue.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqXC3z9ONwWG9LY0gT7s2IpXwaRdMKpdY&libraries=places&callback=initAutocomplete"-->
+            <!--async defer></script>-->
     <title>indianapolis-ui</title>
   </head>
   <body class="skin-blue sidebar-mini">
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>-->
+    <!--<script src="static/plugins/jQuery/jQuery-2.1.4.min.js"></script>-->
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="static/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="static/js/bootstrap-3.3.2.min.js"></script>
+
     <script type="text/javascript" src="static/js/bootstrap-multiselect.js"></script>
     <link rel="stylesheet" href="static/css/bootstrap-multiselect.css" type="text/css"/>
     <!-- FastClick -->
@@ -33,7 +41,5 @@
     <!-- Bootstrap slider -->
     <script src="/static/plugins/bootstrap-slider/bootstrap-slider.js"></script>
   <!--GMAPS API-->
-    <script src=”https://maps.googleapis.com/maps/api/js?key=AIzaSyCsclSAOA7xNA0uVYk8MHaXU4mao9yAaOs”></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsclSAOA7xNA0uVYk8MHaXU4mao9yAaOs&libraries=places"></script>
   </body>
 </html>
