--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <!--<link rel="stylesheet" href="static/css/bootstrap-3.3.2.min.css">-->
     <!--<link rel="stylesheet" href="static/css/bootstrap-vue.css">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqXC3z9ONwWG9LY0gT7s2IpXwaRdMKpdY&libraries=places&callback=initAutocomplete"-->
-            <!--async defer></script>-->
+    <script src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
     <title>indianapolis-ui</title>
   </head>
   <body class="skin-blue sidebar-mini">
