--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!--<link rel="stylesheet" href="static/css/bootstrap-3.3.2.min.css">-->
     <!--<link rel="stylesheet" href="static/css/bootstrap-vue.css">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <title>indianapolis-ui</title>
   </head>
   <body class="skin-blue sidebar-mini">
