--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!--<link rel="stylesheet" href="static/css/bootstrap-3.3.2.min.css">-->
-    <!--<link rel="stylesheet" href="static/css/bootstrap-vue.css">-->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
-    <title>indianapolis-ui</title>
+    <title>Indianapolis FBB Blibli.com</title>
   </head>
   <body class="skin-blue sidebar-mini">
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>-->
-    <!--<script src="static/plugins/jQuery/jQuery-2.1.4.min.js"></script>-->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
